--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@fontsource/nunito": "^4.5.4",
+    "cross-fetch": "^3.1.5",
     "ethers": "^5.6.1",
     "framer-motion": "^6.2.8",
     "graphql": "^16.3.0",
